--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     font-family: 'Poppins', sans-serif;
     overflow-x:hidden;
     background-color:blanchedalmond;
+    text-align:center;
 }
 
 .container{
